force-app/main/default/objects/Expense_Item__c/fields/Expense_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>