force-app/main/default/objects/Expense_Item__c/fields/Expense_Item_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item_Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>