force-app/main/default/objects/Expense_Item__c/validationRules/Lock_Expense_Item.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Expense_Item</fullName>
    <active>true</active>
    <errorConditionFormula>Expense__r.Approval_Process_Started__c = TRUE</errorConditionFormula>
    <errorMessage>This expense report is already submitted for approval. You can no longer modify the items in this expense report.</errorMessage>
</ValidationRule>